--- a/index.html
+++ b/index.html
@@ -4,67 +4,174 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>화이트데이 이벤트</title>
+
 <style>
 * { box-sizing: border-box; }
-body{
-  margin:0; min-height:100vh; display:flex; justify-content:center; align-items:center; padding:24px; overflow:hidden;
-  /* 배경 이미지 (파일이 없다면 아래 URL이 작동합니다) */
-  background-image: linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("https://images.unsplash.com/photo-1518199266791-5375a83190b7?q=80&w=2070");
-  background-size:cover; background-position:center; transition: background-image .5s ease;
-  font-family: system-ui, sans-serif;
+html { -webkit-text-size-adjust: 100%; }
+button { -webkit-appearance: none; appearance: none; font: inherit; }
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+  overflow: hidden;
+
+  /* 배경 이미지: 파일이 없어도 작동하도록 샘플 URL을 넣었습니다. 본인 파일로 바꾸려면 01.jpg로 수정하세요 */
+  background-image:
+    linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+    url("https://images.unsplash.com/photo-1518199266791-5375a83190b7?q=80&w=2070");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: background-image .5s ease;
+
+  font-family: system-ui, -apple-system, "Apple SD Gothic Neo", "Noto Sans KR", sans-serif;
 }
-.card{
-  width:100%; max-width:420px; background:rgba(255,255,255,.95); border-radius:20px; padding:32px; text-align:center; box-shadow:0 15px 40px rgba(0,0,0,.25); z-index:10;
+
+.card {
+  width: 100%;
+  max-width: 420px;
+  background: rgba(255, 255, 255, 0.95);
+  border-radius: 20px;
+  padding: 32px;
+  text-align: center;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+  position: relative;
+  z-index: 10;
 }
-h1{ font-size:22px; margin-bottom:24px; color: #333; }
-.btn-container{ position:relative; width:100%; height:60px; margin-top: 20px; }
-.btn{
-  position:absolute; width:120px; height:48px; border:none; border-radius:30px; font-size:16px; cursor:pointer; transition: transform .15s ease;
+
+h1 {
+  font-size: 22px;
+  line-height: 1.6;
+  margin: 0 0 24px;
+  color: #333;
 }
-.yes{ left: 10%; background:#ff4d6d; color:#fff; }
-.no { right: 10%; background:#d6d6d6; color:#111; z-index: 100; } /* No 버튼을 상단으로 */
-.result{ margin-top:24px; font-size:20px; font-weight:700; color:#ff4d6d; display:none; }
-.heart{ position:fixed; pointer-events:none; animation: float 2.8s linear forwards; z-index:5; font-size: 24px; }
-@keyframes float{ 0%{ transform:translateY(0); opacity:1; } 100%{ transform:translateY(-100vh); opacity:0; } }
+
+.btn-container {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
+}
+
+.btn {
+  position: absolute;
+  width: 120px;
+  height: 48px;
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  z-index: 20;
+}
+
+/* Yes 버튼: 고정 위치 */
+.yes {
+  left: 10%;
+  background: #ff4d6d;
+  color: #fff;
+  transition: transform 0.1s ease;
+}
+.yes:active { transform: scale(0.95); }
+
+/* No 버튼: 순간이동을 위해 transition을 삭제(none)함 */
+.no {
+  right: 10%;
+  background: #d6d6d6;
+  color: #111;
+  transition: none !important; /* 무빙을 빠르게 만들기 위한 핵심 */
+}
+
+.result {
+  margin-top: 24px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #ff4d6d;
+  display: none;
+}
+
+.heart {
+  position: fixed;
+  pointer-events: none;
+  animation: float 2.8s linear forwards;
+  z-index: 5;
+  font-size: 24px;
+}
+
+@keyframes float {
+  0% { transform: translateY(0) scale(1); opacity: 1; }
+  100% { transform: translateY(-100vh) scale(1.5); opacity: 0; }
+}
 </style>
 </head>
+
 <body>
   <div class="card">
     <h1>화이트데이 요리사 하기 👨‍🍳</h1>
-    <div class="btn-container">
-      <button class="btn yes" id="yesBtn">Yes</button>
-      <button class="btn no" id="noBtn">No</button>
+
+    <div class="btn-container" id="btnArea">
+      <button class="btn yes" id="yesBtn" type="button">Yes</button>
+      <button class="btn no" id="noBtn" type="button">No</button>
     </div>
+
     <div class="result" id="result">❤️ 소정이가 요리사 확정! ❤️</div>
   </div>
 
 <script>
+(function () {
   const yesBtn = document.getElementById("yesBtn");
   const noBtn = document.getElementById("noBtn");
   const result = document.getElementById("result");
 
-  // Yes 클릭 이벤트
+  // [1] Yes 버튼 클릭 시
   yesBtn.addEventListener("click", () => {
-    document.body.style.backgroundImage = 'linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("https://images.unsplash.com/photo-1559333086-b0a56225a93c?q=80&w=1974")';
-    result.style.display = "block";
+    // 클릭 시 배경 변경 (본인 파일이 있다면 02.jpg로 수정)
+    document.body.style.backgroundImage =
+      'linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("https://images.unsplash.com/photo-1559333086-b0a56225a93c?q=80&w=1974")';
+    
+    if (result) result.style.display = "block";
     createHearts();
   });
 
-  // No 버튼 도망치기 함수
+  // [2] No 버튼 무빙 함수 (전체 화면 기준 순간이동)
   function moveNo() {
-    // 화면 전체를 기준으로 랜덤 위치 계산
-    const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-    const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
-    
-    noBtn.style.position = "fixed"; // 화면 어디든 이동 가능하게
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
+    const btnWidth = noBtn.offsetWidth;
+    const btnHeight = noBtn.offsetHeight;
+
+    // 화면 크기 내에서 랜덤 좌표 생성 (가장자리 20px 여유)
+    const maxX = window.innerWidth - btnWidth - 20;
+    const maxY = window.innerHeight - btnHeight - 20;
+
+    const randomX = Math.max(10, Math.random() * maxX);
+    const randomY = Math.max(10, Math.random() * maxY);
+
+    // 버튼을 absolute에서 fixed로 바꿔서 카드 밖으로 나가게 함
+    noBtn.style.position = "fixed";
+    noBtn.style.left = randomX + "px";
+    noBtn.style.top = randomY + "px";
   }
 
-  noBtn.addEventListener("mouseenter", moveNo);
-  noBtn.addEventListener("touchstart", (e) => { e.preventDefault(); moveNo(); });
-  noBtn.addEventListener("click", (e) => { e.preventDefault(); moveNo(); });
+  // PC: 마우스만 올려도 즉시 도망
+  noBtn.addEventListener("mouseover", moveNo);
 
+  // 모바일: 터치 시 즉시 도망
+  noBtn.addEventListener("touchstart", (e) => {
+    e.preventDefault();
+    moveNo();
+  }, { passive: false });
+
+  // 클릭 방지
+  noBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    moveNo();
+  });
+
+  // [3] 하트 팡팡 효과
   function createHearts(){
     for(let i=0; i<30; i++){
       const h = document.createElement("div");
@@ -72,11 +179,12 @@ h1{ font-size:22px; margin-bottom:24px; color: #333; }
       h.textContent = "❤️";
       h.style.left = (Math.random() * 100) + "vw";
       h.style.top = "100vh";
-      h.style.fontSize = (Math.random() * 20 + 10) + "px";
+      h.style.fontSize = (Math.random() * 20 + 15) + "px";
       document.body.appendChild(h);
       setTimeout(() => h.remove(), 2800);
     }
   }
+})();
 </script>
 </body>
 </html>
